syntax = "proto3";
package assetmantle.modules.identities.transactions.deputize;

import "ids/base/classification_id.proto";
import "ids/base/identity_id.proto";
import "lists/base/property_list.proto";

message Message {
  string from = 1;
  assetmantle.schema.ids.base.IdentityID from_i_d = 2;
  assetmantle.schema.ids.base.IdentityID to_i_d = 3;
  assetmantle.schema.ids.base.ClassificationID classification_i_d = 4;
  assetmantle.schema.lists.base.PropertyList maintained_properties = 5;
  bool can_issue_identity = 6;
  bool can_quash_identity = 7;
  bool can_add_maintainer = 8;
  bool can_remove_maintainer = 9;
  bool can_mutate_maintainer = 10;
}